# dispatch_noexcept

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backtrace.cpp  dispatch.cpp  dispatch.h
Examples/: test_with_dispatch_noexcept.txt  test_without_dispatch_noexcept.txt
Test/: main.cpp
dispatch_noexcept.xcodeproj/: project.pbxproj
dispatch_noexcept.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
